[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcspub"
version = "0.1.0"
authors = [
    { name="gcspub maintainers" },
]
description = "Streamlined CLI and MCP server for securely publishing artifacts to GCS."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "mcp>=1.0.0",
    "rich",
]

[project.scripts]
gcspub = "gcspub.cli.main:cli"
gcspub-mcp = "gcspub.mcp.server:run_server"
